# boskalis-graphrag

./: .gitignore  README.md
chatbot/: README.md  agent.py  example_env.txt  pyproject.toml
chatbot/agent_runtime/: __init__.py
chatbot/agent_tools/: __init__.py  content_blocks.py  context.py  neo4j_cypher_server.py  search_in_document.py  search_on_name.py
chatbot/backend/: __init__.py  main.py  renderables.py
chatbot/frontend/streamlit/: chat.py
create-graph/: 1 - Create Graph.ipynb  2 - Create Indexes.ipynb
